# jlab

./: .env  .gitignore  Cargo.toml  README.md
assets/: meta.yaml
assets/labels/: 0001.yaml
docs/: 图像标注工具设计.md
docs/plans/: 2026-02-02-options-dialog-design.md  2026-02-02-options-dialog-implementation.md  2026-02-02-shortcuts-extension.md
lab-core/: Cargo.toml
lab-core/examples/: load_data.rs
lab-core/src/: annotation.rs  error.rs  geometry.rs  io.rs  lib.rs  meta.rs
lab-core/src/export/: coco.rs  mod.rs  voc.rs  yolo.rs
lab-gui/: Cargo.toml
lab-gui/locales/: en-US.json  zh-CN.json
lab-gui/src/: app.rs  canvas.rs  geometry.rs  i18n.rs  main.rs  shortcuts.rs  state.rs  tools.rs
lab-gui/src/app/: about_dialog.rs  canvas_view.rs  import_export.rs  menu.rs  options_dialog.rs  panels.rs  status_bar.rs  toolbar.rs
lab-utils/: Cargo.toml
lab-utils/examples/: test_labels_naming.rs
lab-utils/src/: conversion.rs  lib.rs  project.rs  validation.rs
